--- a/microservices/gateway/package.json
+++ b/microservices/gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finance",
+  "name": "gateway",
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
@@ -15,11 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-http-proxy": "^2.1.1",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-http-proxy": "^1.6.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
