dynamoos added and connected to dynamodb locally

--- a/microservices/courses/package.json
+++ b/microservices/courses/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "dynamoose": "^4.0.3",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
   },
