--- a/frontend_nextjs/package.json
+++ b/frontend_nextjs/package.json
@@ -17,9 +17,11 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/forms": "^0.5.9",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.1",
     "flatpickr": "^4.6.13",
     "next": "15.1.3",
     "react": "^18.3.1",
@@ -29,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^3.10.13",
+    "react-redux": "^9.2.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0"
   },
