--- a/frontend_nextjs/package.json
+++ b/frontend_nextjs/package.json
@@ -19,6 +19,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@tanstack/react-query": "^5.67.1",
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
