--- a/frontend_nextjs/package.json
+++ b/frontend_nextjs/package.json
@@ -33,6 +33,7 @@
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^3.10.13",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.0",
     "tailwind-merge": "^2.6.0"
   },
